# loop-modelling

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/3IDP/: metadata.json  model_1.mmcif  model_2.mmcif  model_3.mmcif  model_4.mmcif  model_5.mmcif
examples/6X18/: metadata.json  model_1.mmcif  model_2.mmcif  model_3.mmcif  model_4.mmcif  model_5.mmcif
examples/8RX0/: metadata.json  model_1.mmcif  model_2.mmcif  model_3.mmcif  model_4.mmcif  model_5.mmcif
src/loop_modeller/: __init__.py  io.py  loop_modelling.py  main.py  scoreing.py  utils.py
tests/: test_io.py  test_loop_modelling.py  test_scoring.py  test_utils.py
