[project]
name = "loop-modeller"
version = "0.1.0"
description = "A small script showcasing how missing loops can be modeled into a protein structure"
readme = "README.md"
authors = [
    { name = "daniel", email = "github@dbauer.me" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "biotite>=1.3.0",
    "numpy>=2.2.5",
    "openmm>=8.2.0",
    "pdbfixer",
    "scipy>=1.15.3",
]

[project.scripts]
lm = "loop_modeller.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[tool.uv.sources]
pdbfixer = { git = "https://github.com/openmm/pdbfixer" }

[tool.pytest.ini_options]
markers = [
    "slow: long running tests"
]

[tool.mypy]
ignore_missing_imports = true